# snippets

./: .gitignore  README.md
cpp/: CMakeLists.txt
cpp/include/: CMakeLists.txt  safe_comparators.hpp
cpp/mem_cpy/: CMakeLists.txt  mem_cpy_assert.cpp  mem_cpy_test.cpp  readme.md
include/: safe_comparators.hpp
mem_cpy/: mem_cpy_assert.cpp
